--- a/README
+++ b/README
@@ -1,3 +1,45 @@
+q5Go 0.1
+
+Once again it was time to port qGo/q4Go to a new version of Qt, as Qt4 is
+disappearing from Linux distributions.  The program is now built against
+Qt5.
+
+In the process, a lot of old qGo code that was in really poor shape was
+replaced entirely.  While this fixes a large number of issues, it also
+means that the code should be considered beta quality, since a lot of it
+is very new.  In particular it is not recommended to use the built-in
+IGS client for playing games.  Observing should work fine.
+
+There are some changes in the feature list in this version:
+ * Added a GTP implementation that works with Leela Zero.  GTP support
+   was also improved to be more asynchronous, so as to not lock up the GUI
+   while waiting for the engine.
+   This is also still slightly experimental.
+ * Edit mode behaves differently.  There is now a toolbar to place
+   marks at all times. and a button to change the player to move.
+   Edit mode is available through a toggle button rather than as a side
+   tab, and is only used for adding/removing stones.  New board positions
+   are added as a child when leaving edit mode.
+ * Some less useful features have been removed when it was easier than
+   porting them Qt5 and the replaced foundation.  This includes the user
+   toolbar, cutting and pasting variations, "mouse gestures" and
+   configurable background colors.
+ * Import and export have changed somewhat.  It is now possible to select
+   a rectangular sub-area for ASCII and picture export.
+   ASCII export now generates diagrams usable in the lifein19x19 forums
+   and Sensei's library, including move numbers, with the option of creating
+   multiple diagrams for a sequence of moves automatically.  As a
+   consequence, the character set used for ASCII display is no longer
+   configurable.  ASCII import was removed on the grounds of not
+   being very useful.
+ * The functionality for saving window sizes was simplified to just always
+   save comment orientation.  Size and layout are now remembered separately
+   for every encountered screen dimension.
+   The functionality to save up to 10 different board sizes with
+   keyboard shortcuts was removed.
+
+This update was done by Bernd Schmidt <bernds_cb1@t-online.de>.
+
 q4Go 0.2
 
 This is a port of the last qGo (1.5.2) sources from CVS to Qt4. It should be
