Sort out board settings, mostly regarding variation display
Instead of the "small stones" option which didn't work, we now allow
letters as variation markers.  Together with the option to mark children or
siblings, that means we can really get rid of the mark brothers/mark sons
menu items.

Make the preferences dialog a little less confusing by using combo boxes in
more places instead of a series of checkboxes.

Allow the user to specify how to handle the SGF ST (style) property which
controls variation display.

--- a/README
+++ b/README
@@ -37,6 +37,9 @@ There are some changes in the feature list in this version:
    for every encountered screen dimension.
    The functionality to save up to 10 different board sizes with
    keyboard shortcuts was removed.
+ * Variation display was improved and the user can chooser between letters
+   and ghost stones, as well as choosing whether to use the setting found
+   in SGF files or ignore it.
 
 This update was done by Bernd Schmidt <bernds_cb1@t-online.de>.
 
