Update AUTHORS and the about box

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
+Authors for q4go/q5go, since 2011:
+Bernd Schmidt <bernds_cb1@t-online.de>
+Alexander Klimov
+
+Authors for qGo up to qGo-1.5.4:
 Emmanuel Beranger <e2(at!)beranger.com.fr>
 Johannes Mesa <frosla(at!)gmx.at>
 Peter Strempel <pstrempel(at!)t-online.de>
