Build edit actions in the .ui file
Borrow some icons from the public domain Tango set.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,6 @@ Emmanuel Beranger <e2(at!)beranger.com.fr>
 Johannes Mesa <frosla(at!)gmx.at>
 Peter Strempel <pstrempel(at!)t-online.de>
 Marin Ferecatu
+
+Some icons taken from the Tango icon theme, which is in the public domain.
+https://commons.wikimedia.org/wiki/Tango_icons
