Add an auto-collapsing mode to the game tree

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,8 @@ Marin Ferecatu
 
 Some icons taken from the Tango icon theme, which is in the public domain.
 https://commons.wikimedia.org/wiki/Tango_icons
+
+Other acknowledgements:
+The idea of using dock widgets for the board window is from Pavel
+Zorin-Kranich's version of qgo2.
+The idea of an autocollapsing game tree is from Jago.
