Add some high-res wood textures
Obtained from cc0textures and sharetextures, which license their images under
CC0.

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,9 @@ Marin Ferecatu
 Some icons taken from the Tango icon theme, which is in the public domain.
 https://commons.wikimedia.org/wiki/Tango_icons
 
+Some wood textures were obtained from cc0textures.com and sharetextures.com,
+both of which offer them under the CC0 license ("no copyright").
+
 Other acknowledgements:
 Pavel Zorin-Kranich's version of qgo2 inspired the following:
 - the idea of using dock widgets for the board window
